1.2.8p21:
    Checks & Agents:
    * 4549 FIX: citrix_licenses: Fixed always ok state even if all licenses are used...
    * 4550 FIX: smart: the services do not crash anymore if a threshold is not provided
    * 8629 FIX: win_printers: Fix broken default parameters


1.2.8p20:
    Checks & Agents:
    * 4528 FIX: datapower_mem, hp_procurve_mem, ucd_mem: Improved graph readability...
    * 8627 FIX: apt: Fix Ubuntu "NOTE: This is only a simulation!" warning being output in check...
    * 4529 FIX: hp_proliant_raid: Fixed incomplete raid detection; Added missing states
    * 8628 FIX: printer_alerts: Fix discovery when there are no alerts...


1.2.8p19:
    Checks & Agents:
    * 4187 FIX: check_mk_agent.linux: better performance for tcp connections query...
    * 4438 FIX: statgrab_mem: Fixed wrong calculation of swap...
    * 4479 FIX: Fixed wrong scaling of check-mk-host-service host check command
    * 8664 FIX: prefer ucd_mem over hr_mem in case of pfSense monitoring...
            NOTE: Please refer to the migration notes!
    * 8284 FIX: apache_status: Fixed wrong IPv6 URLs to query the information...
    * 4481 FIX: websphere_mq_channels: fixed incomplete info handling, ie. ValueError: need more than 2 values to unpack
    * 8665 FIX: fixed aborted snmp scan because of werk #8664...
    * 8666 FIX: added more detected APs to aironet_clients
    * 4489 FIX: check_mk_agent.linux: Fixed group option, ie. newer ipmi-sensors versions have a different group option, thus the section was empty.
    * 4491 FIX: logwatch.groups: Fixed inconsistency of service description which now begins with 'Log' instead of 'LOG'...
    * 4492 FIX: mk_oracle.ps1: Now takes version into account which fixed wrong calculation of tablespaces and fixed missing possibility of wallet configuration
    * 4494 FIX: cisco_wlc, cisco_wlc_clients: Fixed missing OID for Cisco WLC 5520 Appliances
    * 4495 FIX: mk_mysql.vbs: Fixed missing command if DB process runs as mysqld-nt.exe