@@ -3,6 +3,7 @@
     * 4549 FIX: citrix_licenses: Fixed always ok state even if all licenses are used...
     * 4550 FIX: smart: the services do not crash anymore if a threshold is not provided
     * 8629 FIX: win_printers: Fix broken default parameters
+    * 4551 FIX: zfs_arc_cache: Fixed metrics in html5 graphing
 
 
 1.2.8p20:
